--- a/a2/index.html
+++ b/a2/index.html
@@ -1,17 +1,81 @@
+
+<!-- Assignment 2- Resume for superhero -->
 <!DOCTYPE HTML>
 
-		<html>
+<html>
 
-			<head>
+	<head>
+		<title>Assignment 2</title>
+		<meta name="Description" content="Resume for the Joker" />
+		<meta name="Author" content="Margaret Christovich">
+		<meta name="Keywords" content="resume, skills, job, joker" />
+	</head>
 
-				<title>Assignment 2</title>
+	<body>
 
-			</head>
+		<h1><b>The Joker</b></h1>
+		<h3>Supervillian/Criminal Mastermind</h3>
+		<p>Psychopath with warped, sadistic sense of humor</p>
+		<h4><a href="mailto:thejoker@darkweb.net"><i>thejoker@darkweb.net</i></a></h4>
+		<img src="images/Joker.jpg" width="200" height="200">
+
+		<!-- Skills -->
+		<h2><b>Skills</b></h2>
+		<hr>
+		<ul>
+			<li>Sadistic sense of humor</li>
+			<li>Cunning Intelligence</li>
+			<li>Goofy prankster</li>
+			<li>No superhuman abilities</li>
+			<li>Chemical engineering experience</li>
+			<li>Unreliable memory</li>
+			<li><a href="https://youtu.be/xGcfBRkJSWQ">Acting Experience</a></li>
+		</ul>
+
+		<!-- List of experience he has-->
+		<h2><b>Work Experience</b></h2>
+		<hr>
+		<table border="1">
+			<tr>
+				<th>Work</th>
+				<th>Date</th>
+			</tr>
+			<tr>
+				<td>The Joker</td>
+				<td><i>March 1951-Present</i></td>
+			</tr>
+			
+			<tr>
+				<td>Chemical Engineer Lab Assistant</td>
+				<td><i>Spetember 1992- January 1993</i></td>
+			</tr>
+			<tr>
+				<td>Stand-Up Comedian</td>
+				<td><i>January 1993- August 1997</i></td>
+			</tr>
+		</table>
+
+		<!-- Hobbies and Interests-->
+		<h2><b>Interests</b></h2>
+		<hr>
+		<ul>
+			<li>Plotting Revenge</li>
+			<li>Gaining attnetion from Batman</li>
+			<li>Payback</li>
+			<li>Embracing chaos</li>
+			<li><a href="https://youtu.be/a2qMsyT662k">Interrogating</a></li>
+		</ul>
+		<hr>
+
+		<address>
+			Written by the Joker
+			<br>
+			<i>72 Faxcol Dr Gotham City, NJ 12345</i>
+			<br>
+			USA
+		</address>
+
+	</body>
+</html>
 
 
-			<body>
-
-			</body>
-
-
-		</html>
