--- a/a3/index.html
+++ b/a3/index.html
@@ -1,17 +1,118 @@
+
+<!-- Assignment 3- Resume for superhero with CSS Styling-->
+
 <!DOCTYPE HTML>
 
-		<html>
+<html lang="en">
 
-			<head>
+	<head>
 
-				<title>Assignment 3</title>
+		<!--tells author what language you are coding in-->
+		<meta charset="UTF-8">
 
-			</head>
+		<title>Assignment 3</title>
+		<meta name="Description" content="Resume for the Joker with CSS" />
+		<meta name="Author" content="Margaret Christovich">
+		<meta name="Keywords" content="resume, skills, job, joker" />
+
+		<!-- font link -->
+		<link href="https://fonts.googleapis.com/css?family=Cinzel|PT+Serif&display=swap" rel="stylesheet">
+
+		<!-- reset and style sheet connected -->
+		<link rel="stylesheet" type="text/css" href="assets/CSS/reset.css">
+		<link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
+
+	</head>
+
+	<body>
+		
+		<div id="top">
+
+			<h1><b>The Joker</b></h1>
+
+			<div id="subTop">
+			<h3>Supervillian/Criminal Mastermind</h3>
+			<p>Psychopath with warped, sadistic sense of humor</p>
+			<h4><a href="mailto:thejoker@darkweb.net"><i>thejoker@darkweb.net</i></a></h4>
+			</div>
+			
+			<!-- holds image for joker -->
+			<div id="jokerImage"></div>
+
+		</div>
+		
+
+		<!-- Skills -->
+		<div class="part">
+
+			<h2><b>Skills</b></h2>
+			<hr>
+			<ul>
+				<li>Sadistic sense of humor</li>
+				<li>Cunning Intelligence</li>
+				<li>Goofy prankster</li>
+				<li>No superhuman abilities</li>
+				<li>Chemical engineering experience</li>
+				<li>Unreliable memory</li>
+				<li><a href="https://youtu.be/xGcfBRkJSWQ">Acting Experience</a></li>
+			</ul>
+
+		</div>
 
 
-			<body>
+		<!-- List of experience he has-->
+		<div class="part">
 
-			</body>
+			<h2><b>Work Experience</b></h2>
+			<hr>
+			<table>
+				<tr>
+					<th class="tableTop">Work</th>
+					<th class="tableTop">Date</th>
+				</tr>
+				<tr>
+					<td class="tableLeft">The Joker</td>
+					<td class="date"><i>March 1951-Present</i></td>
+				</tr>
+				
+				<tr>
+					<td class="tableLeft">Chemical Engineer Lab Assistant</td>
+					<td class="date"><i>Spetember 1992- January 1993</i></td>
+				</tr>
+				<tr>
+					<td class="tableLeft">Stand-Up Comedian</td>
+					<td class="date"><i>January 1993- August 1997</i></td>
+				</tr>
+			</table>
+
+		</div>
+
+		<!-- Hobbies and Interests-->
+		<div class="part">
+
+			<h2><b>Interests</b></h2>
+			<hr>
+			<ul>
+				<li>Plotting Revenge</li>
+				<li>Gaining attnetion from Batman</li>
+				<li>Payback</li>
+				<li>Embracing chaos</li>
+				<li><a href="https://youtu.be/a2qMsyT662k">Interrogating</a></li>
+			</ul>
+			<hr>
+
+		</div>
+
+		<address>
+			Written by the Joker
+			<br>
+			<i>72 Faxcol Dr Gotham City, NJ 12345</i>
+			<br>
+			USA
+		</address>
+
+	</body>
+
+</html>
 
 
-		</html>
