--- a/a4/index.html
+++ b/a4/index.html
@@ -1,17 +1,105 @@
+
 <!DOCTYPE HTML>
 
 		<html>
 
 			<head>
 
-				<title>Assignment 4</title>
+				<title>Miami Beach</title>
+
+				<meta charset="UTF-8">
+				 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+				<link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
 
 			</head>
 
 
 			<body>
 
+
+			<div class="container">
+
+				<header><h1>Miami Beach</h1></header>
+
+		    	<nav>	<h2><a href="#" target="_blank">Home</a>       <a href="gallery.html" target="_blank">Gallery</a>       <a href="attractions.html" target="_blank">Attractions</a>    <a href="contact.html" target="_blank">Contact</a></h2></nav>
+
+		    	<article>
+
+		    		<h2>Welcome to Miami</h2>
+		    		<p>Miami Beach is a coastal resort city in Miami-Dade County, Florida, United States. The municipality is located on natural and man-made barrier islands between the Atlantic Ocean and Biscayne Bay, the latter of which separates the Beach from the mainland city of Miami. The neighborhood of South Beach, comprising the southernmost 2.5 square miles of Miami Beach, along with downtown Miami and the Port of Miami, collectively form the commercial center of South Florida.</p>
+		    		<img width="330px" height="270px" id="logo" src="assets/images/skyview.jpg">
+
+
+		    		<h2>Fast Facts!</h2>
+		    		<ul>
+         			 	<li><b>Population:</b> 91,718</li>
+         			 	<li><b>Average Household Income:</b> $42,547</li>
+         			 	<li><b>Incorporation Date: </b> March 26, 1915</li>
+         			 </ul>
+         			 
+         			 <img width="330px" height="270px" id="logo" src="assets/images/skyview.jpg">
+
+
+
+		    		<h2>Welcome to Miami</h2>
+		    		<p>Miami Beach is a coastal resort city in Miami-Dade County, Florida, United States. The municipality is located on natural and man-made barrier islands between the Atlantic Ocean and Biscayne Bay, the latter of which separates the Beach from the mainland city of Miami. The neighborhood of South Beach, comprising the southernmost 2.5 square miles of Miami Beach, along with downtown Miami and the Port of Miami, collectively form the commercial center of South Florida.</p>
+		    		<img width="330px" height="270px" id="logo" src="assets/images/skyview.jpg">
+
+
+
+		    	</article>
+		    	
+		    	<footer>Footer</footer>
+			</div>
+
+
+
+			
+			<!--
+
+			Miami Beach
+
+			A slogan/quote for your potential city
+			It's So Miami
+			
+
+			It was incorporated on March 26, 1915. T
+
+			Current Population- 91,718 
+			
+			Average Household Income- $42,547
+			
+			Picture of the potential city
+			
+			4 features of the potential city
+
+				Shopping
+
+				Food
+
+				Nightlife
+
+				Art
+			
+			1 Major feature or news about the city
+
+				South Beach
+			
+			10 - 15 Pictures related to the goal of the site, the potential city or any of the features described
+			-->
+
+
 			</body>
 
 
 		</html>
+
+
+
+
+
+
+
+
+
