--- a/a4/gallery.html
+++ b/a4/gallery.html
@@ -1,16 +1,18 @@
 
 <!DOCTYPE HTML>
 
-		<html>
+		<html lang="en">
 
 			<head>
 
-				<title>Miami Beach Gallery</title>
+				<title>Gallery | Miami Beach</title>
 
 				<meta charset="UTF-8">
 				 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 				<link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
+
+				<link href="https://fonts.googleapis.com/css?family=Montserrat|Noto+Serif|Rock+Salt&display=swap" rel="stylesheet">
 
 			</head>
 
@@ -19,42 +21,52 @@
 
 
 			<div class="container">
-				<header><h1>Miami Beach</h1></header>
-		    	<nav>	<h2><a href="#" target="_blank">Home</a>       <a href="gallery.html" target="_blank">Gallery</a>       <a href="attractions.html" target="_blank">Attractions</a>    <a href="contact.html" target="_blank">Contact</a></h2></nav>
-		    	<article>Article</article>
+				<header><h1>MIAMI BEACH</h1></header>
+		    	
+		    	<nav>		
+		    	<h2><a href="index.html">Home</a>       
+		    	<a href="#" >Gallery</a>      
+		    	<a href="attractions.html" >Attractions</a>    
+		    	<a href="contact.html">Contact</a></h2>
+		    	</nav>
+
+		    	<article id="galChunk">
+
+					<div class="gal" id="gal1"></div>
+
+					<div class="gal" id="gal2"></div>
+
+					<div class="gal" id="gal3"></div>
+
+					<div class="gal" id="gal4"></div>
+
+					<div class="gal" id="gal5"></div>
+
+					<div class="gal"  id="gal6"></div>
+
+					<div class="gal"  id="gal7"></div>
+
+					<div class="gal"  id="gal8"></div>
+
+					<div class="gal"  id="gal9"></div>
+
+					<div class="gal"  id="gal10"></div>
+
+		    	</article>
 		    
-		    	<footer>Footer</footer>
+		    	<footer>
+
+		    	<address>
+					&copy;
+					written by <a href="mailto:welcome@maimi.edu"> Miami Welcome Center </a>
+				<br>
+				Visit us at 
+				530 17th St, Miami Beach, FL 33139
+				</address>
+
+				</footer>
 			</div>
-			
-			<!--
 
-			Miami Beach
-
-			A slogan/quote for your potential city
-			It's So Miami
-			
-			Current Population- 91,718 
-			
-			Average Household Income- $42,547
-			
-			Picture of the potential city
-			
-			4 features of the potential city
-
-				Shopping
-
-				Food
-
-				Nightlife
-
-				Art
-			
-			1 Major feature or news about the city
-
-				South Beach
-			
-			10 - 15 Pictures related to the goal of the site, the potential city or any of the features described
-			-->
 
 
 			</body>
