--- a/a5/index.html
+++ b/a5/index.html
@@ -1,17 +1,42 @@
+
+
 <!DOCTYPE HTML>
 
-		<html>
+	<html>
 
 			<head>
 
-				<title>Assignment 5</title>
+				<title>Javascript/JQuery Assignment</title>
+
+				<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+				<link href="https://fonts.googleapis.com/css?family=Lora|Rancho&display=swap" rel="stylesheet">
+				<meta charset="UTF-8">
+				<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 			</head>
 
 
 			<body>
 
+
+				<h1 id="topText"></h1>
+
+				<!--image-->
+				<div></div>
+
+				<h1 id="mainText"></h1>
+
+				<p></p>
+
+				<button id="mainButton">Start</button>
+
+				<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+
+				<!-- linked js file -->
+				<script type="text/javascript" src="assets/js/portfolioSite.js"></script>
+
 			</body>
 
 
-		</html>
+	</html>
